--- a/css/styles.css
+++ b/css/styles.css
@@ -597,7 +597,7 @@ section:nth-child(4){
 }
 
 section:nth-child(4)>div:nth-child(1)>img{
-    position: relative;
+    position: absolute;
     top: -200px;
     width: 1349.4px;
     height: 1200px;
@@ -606,318 +606,318 @@ section:nth-child(4)>div:nth-child(1)>img{
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h1{
     width: 68vh;
-    position: relative;
+    position: absolute;
     font-family: Inter, "Arial Black";
     font-weight: 600;
     font-size: 2vw;
     color: #ffffff;
-    bottom: 3vh;
-    left: 57vh;
+    bottom: 139vh;
+    left: 93vh;
     margin: auto;
     z-index: 1;
 }
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h2{
     width: 63vh;
-    position: relative;
+    position: absolute;
     font-family: 'Catamaran';
     font-weight: 600;
     font-size: 3vw;
     color: #000000;
-    bottom: 6vh;
-    left: 50vh;
+    bottom: 134vh;
+    left: 90vh;
     margin: auto;
     z-index: 1;
 }
 
-section:nth-child(4)>div:nth-child(2)>div{
-    position: relative;
-    top: -186vh;
-    left: 7vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div{*/
+/*    position: relative;*/
+/*    top: -186vh;*/
+/*    left: 7vh;*/
+/*}*/
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(2){
     position: absolute;
     padding-left: 14vw;
     padding-right: 14vw;
-    top: 20vh;
+    top: 35vh;
     z-index: 1;
 }
 
 section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>hr{
-    position: relative;
+    position: absolute;
     box-sizing: content-box;
     height: 6px;
     width: 130vh;
-    left: 11vh;
-    bottom: 0.1vh;
+    left: 47vh;
+    bottom: 79vh;
     background-color: #00B4D8;
 }
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(1){
-    position: relative;
-    height: 4vh;
-    left: 140.8vh;
-    bottom: 14.7vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(1){*/
+/*    position: absolute;*/
+/*    height: 4vh;*/
+/*    left: 164.8vh;*/
+/*    bottom: 53vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(2){
-    position: relative;
-    top: -2.65vh;
-    right: 1vh;
-    width: 8vh;
-}
-
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h5{
-    position: relative;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 13vh;
-    top: -17.5vh;
-    bottom: 10vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>img{
-    position: relative;
-    left: 31vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 31vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h1{
-    width: 50vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: relative;
-    bottom: 42vh;
-    left: 85vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: relative;
-    bottom: 43vh;
-    left: 95vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(2){*/
+/*    position: relative;*/
+/*    top: -2.65vh;*/
+/*    right: 1vh;*/
+/*    width: 8vh;*/
+/*}*/
 
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    top: 75.7vh;
-    z-index: 1;
-}
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{
-    position: relative;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 11.49vh;
-    bottom: 42.09vh;
-    background-color: #00B4D8;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h5{*/
+/*    position: relative;*/
+/*    font-family: system-ui;*/
+/*    font-size: 3vh;*/
+/*    left: 13vh;*/
+/*    top: -17.5vh;*/
+/*    bottom: 10vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{
-    position: relative;
-    width: 8vh;
-    left: 136vh;
-    bottom: 44.8vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>img{*/
+/*    position: relative;*/
+/*    left: 31vh;*/
+/*    bottom: 7vh;*/
+/*    height: 12vh;*/
+/*    width: 12vh;*/
+/*    bottom: 31vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{
-    width: 16vh;
-    position: relative;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 117vh;
-    bottom: 71.9vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h1{*/
+/*    width: 50vh;*/
+/*    font-size: 3vh;*/
+/*    font-family: system-ui;*/
+/*    position: relative;*/
+/*    bottom: 42vh;*/
+/*    left: 85vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{
-    position: relative;
-    left: 101vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 58vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h2{*/
+/*    width: 50vh;*/
+/*    font-size: 2vh;*/
+/*    font-family: system-ui,cursive;*/
+/*    position: relative;*/
+/*    bottom: 43vh;*/
+/*    left: 95vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h1{
-    width: 50vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: relative;
-    bottom: 82vh;
-    left: 13vh;
-}
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: relative;
-    bottom: 83vh;
-    left: 24vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3){*/
+/*    position: absolute;*/
+/*    padding-left: 14vw;*/
+/*    padding-right: 14vw;*/
+/*    top: 75.7vh;*/
+/*    z-index: 1;*/
+/*}*/
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{*/
+/*    position: relative;*/
+/*    box-sizing: content-box;*/
+/*    height: 6px;*/
+/*    width: 125vh;*/
+/*    left: 11.49vh;*/
+/*    bottom: 42.09vh;*/
+/*    background-color: #00B4D8;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4){
-    position: relative;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    bottom: 301vh;
-    z-index: 1;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{*/
+/*    position: relative;*/
+/*    width: 8vh;*/
+/*    left: 136vh;*/
+/*    bottom: 44.8vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>hr{
-    position: relative;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 12.3vh;
-    bottom: 82.4vh;
-    background-color: #00B4D8;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{*/
+/*    width: 16vh;*/
+/*    position: relative;*/
+/*    font-family: system-ui;*/
+/*    font-size: 3vh;*/
+/*    left: 117vh;*/
+/*    bottom: 71.9vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>div>img{
-    position: relative;
-    width: 8vh;
-    left: 4.5vh;
-    bottom: 85vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{*/
+/*    position: relative;*/
+/*    left: 101vh;*/
+/*    bottom: 7vh;*/
+/*    height: 12vh;*/
+/*    width: 12vh;*/
+/*    bottom: 58vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h5{
-    position: relative;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 12vh;
-    bottom: 99.9vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h1{*/
+/*    width: 50vh;*/
+/*    font-size: 3vh;*/
+/*    font-family: system-ui;*/
+/*    position: relative;*/
+/*    bottom: 82vh;*/
+/*    left: 13vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>img{
-    position: relative;
-    left: 32vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 112.5vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h2{*/
+/*    width: 50vh;*/
+/*    font-size: 2vh;*/
+/*    font-family: system-ui,cursive;*/
+/*    position: relative;*/
+/*    bottom: 83vh;*/
+/*    left: 24vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h1{
-    width: 61vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: relative;
-    bottom: 125vh;
-    left: 72vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4){*/
+/*    position: absolute;*/
+/*    padding-left: 14vw;*/
+/*    padding-right: 14vw;*/
+/*    top: 129.1vh;*/
+/*    z-index: 1;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: relative;
-    bottom: 126vh;
-    left: 84vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>hr{*/
+/*    position: relative;*/
+/*    box-sizing: content-box;*/
+/*    height: 6px;*/
+/*    width: 125vh;*/
+/*    left: 12.3vh;*/
+/*    bottom: 82.4vh;*/
+/*    background-color: #00B4D8;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    bottom: 301vh;
-    z-index: 1;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>div>img{*/
+/*    position: relative;*/
+/*    width: 8vh;*/
+/*    left: 4.5vh;*/
+/*    bottom: 85vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>hr{
-    position: relative;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 11vh;
-    bottom: 124.7vh;
-    background-color: #00B4D8;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h5{*/
+/*    position: relative;*/
+/*    font-family: system-ui;*/
+/*    font-size: 3vh;*/
+/*    left: 12vh;*/
+/*    bottom: 99.9vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>div>img{
-    position: relative;
-    width: 8vh;
-    left: 135.5vh;
-    bottom: 127.3vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>img{*/
+/*    position: relative;*/
+/*    left: 32vh;*/
+/*    bottom: 7vh;*/
+/*    height: 12vh;*/
+/*    width: 12vh;*/
+/*    bottom: 112.5vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h5{
-    width: 17vh;
-    position: relative;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 117vh;
-    bottom: 154.9vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h1{*/
+/*    width: 61vh;*/
+/*    font-size: 3vh;*/
+/*    font-family: system-ui;*/
+/*    position: relative;*/
+/*    bottom: 125vh;*/
+/*    left: 72vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>img{
-    position: relative;
-    left: 102vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 140.5vh;
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h2{*/
+/*    width: 50vh;*/
+/*    font-size: 2vh;*/
+/*    font-family: system-ui,cursive;*/
+/*    position: relative;*/
+/*    bottom: 126vh;*/
+/*    left: 84vh;*/
+/*}*/
 
-    /*position: absolute;*/
-    /*flex-shrink: 0;*/
-    /*!*background: rgb(253, 208, 79);*!*/
-    /*height: 12vh;*/
-    /*left: 12vh;*/
-    /*bottom: 140.5vh;*/
-    /*right: 100px*/
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5){*/
+/*    position: absolute;*/
+/*    padding-left: 14vw;*/
+/*    padding-right: 14vw;*/
+/*    bottom: 301vh;*/
+/*    z-index: 1;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h1{
-    width: 61vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: relative;
-    bottom: 165vh;
-    left: 12vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>hr{*/
+/*    position: relative;*/
+/*    box-sizing: content-box;*/
+/*    height: 6px;*/
+/*    width: 125vh;*/
+/*    left: 11vh;*/
+/*    bottom: 124.7vh;*/
+/*    background-color: #00B4D8;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: relative;
-    bottom: 166vh;
-    left: 14vh;
-}
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6){
-    position: relative;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    bottom: 301vh;
-    z-index: 1;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>div>img{*/
+/*    position: relative;*/
+/*    width: 8vh;*/
+/*    left: 135.5vh;*/
+/*    bottom: 127.3vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>hr{
-    position: relative;
-    box-sizing: content-box;
-    height: 6px;
-    width: 127vh;
-    left: 9vh;
-    bottom: 165vh;
-    background-color: #00B4D8;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h5{*/
+/*    width: 17vh;*/
+/*    position: relative;*/
+/*    font-family: system-ui;*/
+/*    font-size: 3vh;*/
+/*    left: 117vh;*/
+/*    bottom: 154.9vh;*/
+/*}*/
 
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>div>img{
-    position: relative;
-    height: 4vh;
-    left: 5.8vh;
-    bottom: 168.7vh;
-}
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>img{*/
+/*    position: relative;*/
+/*    left: 102vh;*/
+/*    bottom: 7vh;*/
+/*    height: 12vh;*/
+/*    width: 12vh;*/
+/*    bottom: 140.5vh;*/
+
+/*    !*position: absolute;*!*/
+/*    !*flex-shrink: 0;*!*/
+/*    !*!*background: rgb(253, 208, 79);*!*!*/
+/*    !*height: 12vh;*!*/
+/*    !*left: 12vh;*!*/
+/*    !*bottom: 140.5vh;*!*/
+/*    !*right: 100px*!*/
+/*}*/
+
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h1{*/
+/*    width: 61vh;*/
+/*    font-size: 3vh;*/
+/*    font-family: system-ui;*/
+/*    position: relative;*/
+/*    bottom: 165vh;*/
+/*    left: 12vh;*/
+/*}*/
+
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h2{*/
+/*    width: 50vh;*/
+/*    font-size: 2vh;*/
+/*    font-family: system-ui,cursive;*/
+/*    position: relative;*/
+/*    bottom: 166vh;*/
+/*    left: 14vh;*/
+/*}*/
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(6){*/
+/*    position: relative;*/
+/*    padding-left: 14vw;*/
+/*    padding-right: 14vw;*/
+/*    bottom: 301vh;*/
+/*    z-index: 1;*/
+/*}*/
+
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>hr{*/
+/*    position: relative;*/
+/*    box-sizing: content-box;*/
+/*    height: 6px;*/
+/*    width: 127vh;*/
+/*    left: 9vh;*/
+/*    bottom: 165vh;*/
+/*    background-color: #00B4D8;*/
+/*}*/
+
+/*section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>div>img{*/
+/*    position: relative;*/
+/*    height: 4vh;*/
+/*    left: 5.8vh;*/
+/*    bottom: 168.7vh;*/
+/*}*/
 
 section:nth-child(5)>h5{
     width: 68vh;
